add c3p0 databases sources lib

--- a/pom.xml
+++ b/pom.xml
@@ -167,6 +167,12 @@
       <version>${slf4j.version}</version>
     </dependency>
 
+    <dependency>
+      <groupId>c3p0</groupId>
+      <artifactId>c3p0</artifactId>
+      <version>0.9.1.2</version>
+    </dependency>
+
   </dependencies>
 
 
