--- a/src/main/org/aibo/config/db.properties
+++ b/src/main/org/aibo/config/db.properties
@@ -1,13 +1,9 @@
-db.driver=com.mysql.jdbc.Driver
-db.url=jdbc:mysql://localhost:3306/mybatis?characterEncoding=UTF-8
-db.user=root
-db.password=123456
-db.maxActive=10
-db.initialSize=2
-db.minIdle=2
-db.maxWait=60000
-db.timeBetweenEvictionRunsMillis=3000
-db.minEvictableIdleTimeMillis=300000
-db.testWhileIdle=true
-db.testOnBorrow=false
-db.testOnReturn=false
+jdbc.driverClassName=com.mysql.jdbc.Driver  
+jdbc.url=jdbc:mysql://192.168.1.194:3306/test?useUnicode=true&characterEncoding=UTF-8  
+jdbc.username=root  
+jdbc.password=root  
+
+c3p0.pool.size.max=20  
+c3p0.pool.size.min=5  
+c3p0.pool.size.ini=3  
+c3p0.pool.size.increment=2 
