--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,27 @@
         </configuration>
       </plugin>
     </plugins>
+
+      <plugins>
+        <plugin>
+          <artifactId>maven-compiler-plugin</artifactId>
+          <version>2.3.2</version>
+          <configuration>
+            <source>1.7</source>
+            <target>1.7</target>
+          </configuration>
+        </plugin>
+        <plugin>
+          <artifactId>maven-war-plugin</artifactId>
+          <version>2.2</version>
+          <configuration>
+            <version>3.0</version>
+            <failOnMissingWebXml>false</failOnMissingWebXml>
+          </configuration>
+        </plugin>
+      </plugins>
+      <finalName>${project.artifactId}_${project.version}_${maven.build.timestamp}</finalName>
+
   </build>
 
   <properties>
@@ -187,7 +208,7 @@
     <dependency>
       <groupId>javax.servlet</groupId>
       <artifactId>servlet-api</artifactId>
-      <version>3.0</version>
+      <version>2.5</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
