--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,8 @@
           <version>1.0-SNAPSHOT</version>
         </dependency-->
 
+        <!-- spring framework library start -->
+
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-core</artifactId>
@@ -142,12 +144,14 @@
             <version>${spring.version}</version>
         </dependency>
 
+        <!-- spring framework library end -->
+
+        <!-- mybatis library start -->
         <dependency>
             <groupId>org.mybatis</groupId>
             <artifactId>mybatis</artifactId>
             <version>${mybatis.version}</version>
         </dependency>
-
 
         <dependency>
             <groupId>org.mybatis</groupId>
@@ -155,12 +159,22 @@
             <version>1.3.1</version>
         </dependency>
 
+        <!-- mybatis library end -->
+
+        <dependency>
+            <groupId>c3p0</groupId>
+            <artifactId>c3p0</artifactId>
+            <version>0.9.1.2</version>
+        </dependency>
+
+        <!-- mysql connector lib -->
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>5.1.29</version>
         </dependency>
 
+        <!-- junit test lib -->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
@@ -168,12 +182,14 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- fastjson lib -->
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
             <version>1.2.44</version>
         </dependency>
 
+        <!-- log4j lib start -->
         <dependency>
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
@@ -192,13 +208,9 @@
             <version>${slf4j.version}</version>
         </dependency>
 
-        <dependency>
-            <groupId>c3p0</groupId>
-            <artifactId>c3p0</artifactId>
-            <version>0.9.1.2</version>
-        </dependency>
+        <!-- log4j lib end -->
 
-
+        <!-- javaee servlet lib start -->
         <dependency>
             <groupId>org.aspectj</groupId>
             <artifactId>aspectjweaver</artifactId>
@@ -242,6 +254,7 @@
             <version>4.5</version>
         </dependency>
 
+        <!-- javaee servlet lib end  -->
 
     </dependencies>
 
