Upload bootstrap files and create login action
1. Upload bootstrap UI files
2. Create login function

--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,7 @@
                     <!--<contextPath>/</contextPath>-->
                 <!--</configuration>-->
             <!--</plugin>-->
+        <!--</plugins>-->
 
             <!--<plugin>-->
                 <!--<artifactId>maven-compiler-plugin</artifactId>-->
