--- a/pom.xml
+++ b/pom.xml
@@ -160,6 +160,12 @@
             <version>1.3.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper</artifactId>
+            <version>5.0.0</version>
+        </dependency>
+
         <!-- mybatis library end -->
 
         <dependency>
