--- a/pom.xml
+++ b/pom.xml
@@ -260,6 +260,11 @@
             <artifactId>httpclient</artifactId>
             <version>4.5</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>RELEASE</version>
+        </dependency>
 
         <!-- javaee servlet lib end  -->
 
